컨슈머 다시 만들기 - 이건 왜 되지...?