@@ -1,21 +1,19 @@
-package wendy.consumer.simpleconsumer;
+package com.example;
 
-import lombok.extern.slf4j.Slf4j;
-import org.apache.kafka.clients.consumer.*;
+import org.apache.kafka.clients.consumer.ConsumerConfig;
+import org.apache.kafka.clients.consumer.ConsumerRecord;
+import org.apache.kafka.clients.consumer.ConsumerRecords;
+import org.apache.kafka.clients.consumer.KafkaConsumer;
 import org.apache.kafka.common.serialization.StringDeserializer;
-
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import java.time.Duration;
-import java.util.List;
+import java.util.Arrays;
 import java.util.Properties;
 
-@Slf4j
-/**
- * 22:24:41.202 [main] DEBUG org.apache.kafka.clients.consumer.internals.Fetcher -
- * [Consumer clientId=consumer-test-group-1, groupId=test-group]
- * Sending READ_UNCOMMITTED IncrementalFetchRequest(toSend=(), toForget=(), implied=(test-0)) to broker localhost:9092 (id: 0 rack: null)
- */
 public class SimpleConsumer {
+    private final static Logger logger = LoggerFactory.getLogger(SimpleConsumer.class);
     private final static String TOPIC_NAME = "test";
     private final static String BOOTSTRAP_SERVERS = "localhost:9092";
     private final static String GROUP_ID = "test-group";
@@ -28,13 +26,14 @@ public class SimpleConsumer {
         configs.put(ConsumerConfig.VALUE_DESERIALIZER_CLASS_CONFIG, StringDeserializer.class.getName());
 
         KafkaConsumer<String, String> consumer = new KafkaConsumer<>(configs);
-        consumer.subscribe(List.of(TOPIC_NAME));
-        while(true) {
+
+        consumer.subscribe(Arrays.asList(TOPIC_NAME));
+
+        while (true) {
             ConsumerRecords<String, String> records = consumer.poll(Duration.ofSeconds(1));
-            for(ConsumerRecord<String, String> record: records)
-                log.info("record: {}", record);
+            for (ConsumerRecord<String, String> record : records) {
+                logger.info("record:{}", record);
+            }
         }
-
     }
-
 }
